разобрались как гет пост завпросы к бд писать было очень тяжко
